--- a/dzvoice/assets/scss/style.scss
+++ b/dzvoice/assets/scss/style.scss
@@ -28,7 +28,8 @@ body {
 @import "./components/results-slider";
 @import "./components//benefit";
 @import "./components/consult";
-
+@import "./components/contacts";
+@import "./components/footer";
 // main
 
 // other
