--- a/dzvoice/assets/scss/components/_consult.scss
+++ b/dzvoice/assets/scss/components/_consult.scss
@@ -200,7 +200,7 @@
           position: absolute;
           left: -50px;
           top: 0;
-          transition: all 0.3s ease;
+       
         }
         &:checked + label::before {
           border-color: #0b76ef;
@@ -254,9 +254,21 @@
         color: $mainColor;
         position: relative;
         padding: 0;
+        transition: all 0.4s ease;
+        &:hover {
+          color:#fff;
+          svg {
+            path {
+              stroke:#fff;
+            }
+          }
+        }
         &-arrow {
           position: absolute;
           left: 30px;
+          path {
+            transition: all 0.4s ease;
+          }
         }
       }
     }
