--- a/dzvoice/assets/scss/components/_offer.scss
+++ b/dzvoice/assets/scss/components/_offer.scss
@@ -66,7 +66,7 @@
         margin-left: 29px;
       }
     }
-    &__text {
+    &__link {
       display: flex;
       align-items: center;
       font-family: $grotesk;
@@ -76,6 +76,11 @@
       line-height: 23px;
       letter-spacing: 0.04em;
       transition: all 0.3s ease;
+      color:$mainColor;
+      text-decoration: none !important;
+      &:hover {
+        color:#fff;
+      }
       span {
         display: block;
       }
@@ -117,18 +122,161 @@
       }
     }
     &__img {
-      cirlce,path {
+      cirlce,
+      path {
         transition: all 0.3s ease;
       }
     }
     &__link {
       &:hover {
-        svg {  
+        svg {
           circle {
-            stroke:#F77125;
+            stroke: #f77125;
           }
           path {
-            stroke:#F77125;
+            stroke: #f77125;
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 1199px) and (min-width: 992px) {
+  .offer {
+    padding-top: 208px;
+    position: relative;
+    &-bg {
+      width: 565px;
+      height: 566px;
+      position: absolute;
+      right: 126px;
+      top: -20px;
+      z-index: -1;
+      background: radial-gradient(
+        50% 50% at 50% 50%,
+        #f77125 0%,
+        rgba(196, 196, 196, 0) 100%
+      );
+      filter: blur(50px);
+      right: -187px;
+      top: 88px;
+    }
+    &-btn {
+      width: 296px;
+      position: relative;
+      height: fit-content;
+      &::before {
+        content: "";
+        width: 308px;
+        height: 2px;
+        position: absolute;
+        background: linear-gradient(91.86deg, #dc4a8c 0.68%, #f77125 91.47%);
+      }
+      &:hover {
+        svg {
+          path {
+            stroke: #fff;
+          }
+        }
+        p {
+          color: #fff;
+        }
+      }
+      &--result {
+        margin-top: 98px;
+        &::before {
+          bottom: -20px;
+          left: -24px;
+        }
+      }
+      &--course {
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 184px;
+        margin-left: 150px;
+        &::before {
+          width: 420px;
+          top: -20px;
+          right: -24px;
+        }
+      }
+
+      &__arrow {
+        path {
+          transition: all 0.3s ease;
+        }
+        &--result {
+          margin-right: 30px;
+        }
+        &--course {
+          margin-left: 29px;
+        }
+      }
+      &__link {
+        display: flex;
+        align-items: center;
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 19px;
+        line-height: 23px;
+        letter-spacing: 0.04em;
+        transition: all 0.3s ease;
+        span {
+          display: block;
+        }
+        &--course {
+          text-align: right;
+        }
+      }
+    }
+    &-img {
+      width: 358px;
+      height: 269px;
+      position: relative;
+      z-index: -4;
+      &__wrap {
+        position: relative;
+        &::before {
+          content: "";
+          position: absolute;
+          width: 600px;
+          height: 600px;
+          z-index: -3;
+          top: -216px;
+          right: -263px;
+          background: radial-gradient(
+            34.13% 30.65% at 50% 48.49%,
+            #c0d6dc 0%,
+            rgba(196, 196, 196, 0) 100%
+          );
+        }
+      }
+    }
+    &-socials {
+      display: flex;
+      align-items: center;
+      &__item {
+        margin-right: 20px;
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+      &__img {
+        cirlce,
+        path {
+          transition: all 0.3s ease;
+        }
+      }
+      &__link {
+        &:hover {
+          svg {
+            circle {
+              stroke: #f77125;
+            }
+            path {
+              stroke: #f77125;
+            }
           }
         }
       }
